[package]
name = "conchord-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
kord = { version = "0.7.1", default-features = false }
ordered-float = "5.0.0"
wasm-minimal-protocol = {version = "0.1.0", optional = true}

[lib]
# Compiling
# $env:RUSTFLAGS="-Zlocation-detail=none -Zfmt-debug=none"
# cargo build -Z build-std=std,panic_abort -Z build-std-features="optimize_for_size" --release --target wasm32-unknown-unknown --features wasm-minimal-protocol --lib
crate-type = ["cdylib"]

[features]
build-binary = ["wasm-minimal-protocol"]

# cargo run --bin cli --quiet -- "Cmaj7/E" 
[[bin]]
name = "cli"
path="src/cli.rs"

[profile.release]
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic

[workspace] # so that it is not included in the upper workspace